animation shorthand & backface-visibility to fix end shake

--- a/natoursProject/css/style.css
+++ b/natoursProject/css/style.css
@@ -46,6 +46,10 @@ body {
   height: 35px;
 }
 
+.logo:hover {
+  animation: moveInRight 1s ease-out;
+}
+
 .text-box {
   position: absolute;
   top: 40%;
@@ -57,6 +61,8 @@ body {
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
+
+  backface-visibility: hidden;
 }
 
 .heading-primary-main {
@@ -66,7 +72,14 @@ body {
   letter-spacing: 35px;
 
   animation-name: moveInLeft;
-  animation-duration: 5s;
+  animation-duration: 3s;
+  animation-timing-function: ease-out;
+
+  /* 
+  animation-delay: 3s; 
+  animation-iteration-count: 3;
+
+  */
 }
 
 .heading-primary-sub {
@@ -75,8 +88,12 @@ body {
   font-weight: 700;
   letter-spacing: 17.4px;
 
+  animation: moveInRight 3s ease-out;
+
+  /* 
   animation-name: moveInRight;
   animation-duration: 3s;
+   */
 }
 
 @keyframes moveInLeft {
@@ -86,6 +103,7 @@ body {
   }
 
   80% {
+    transform: translateX(10px);
   }
 
   100% {
@@ -101,6 +119,7 @@ body {
   }
 
   80% {
+    transform: translateX(-10px);
   }
 
   100% {
